--- a/зачетный проект/css/style.css
+++ b/зачетный проект/css/style.css
@@ -1573,6 +1573,10 @@ body {
 		padding: 20px;
 		flex-wrap: wrap;
 	}
+    .partners-logo{
+        width: 200px;
+      
+    }
 	.partners-link {
 		margin: 0 0 10px 0;
 	}
@@ -1592,4 +1596,5 @@ body {
 		margin: 0 0 15px 0;
 	}
 	.copy {}
+    
 }
