поправил для айфон 11

--- a/зачетный проект/css/style.css
+++ b/зачетный проект/css/style.css
@@ -1574,7 +1574,8 @@ body {
 		flex-wrap: wrap;
 	}
     .partners-logo{
-        width: 200px;
+        width: 157px;
+        height: auto;
       
     }
 	.partners-link {
